--- a/ansible/azure-vm-stop.yml
+++ b/ansible/azure-vm-stop.yml
@@ -4,6 +4,6 @@
   tasks:
     - name: Stop virtual machine
       azure_rm_virtualmachine:
-        resource_group: {{ test }}
-        name: {{ VMtest }}
+        resource_group: test
+        name: VMtest
         allocated: no
