--- a/ansible/DES_APIM-stop.yml
+++ b/ansible/DES_APIM-stop.yml
@@ -2,7 +2,7 @@ name: Stop DES_APIM
   hosts: localhost
   connection: local
   tasks:
-    - name: Stop virtual machine
+    - name: Stop API_01
       azure_rm_virtualmachine:
         resource_group: infracodesa
         name: INFRACODESWSO2API01
