--- a/ansible/DES_EI-stop.yml
+++ b/ansible/DES_EI-stop.yml
@@ -2,7 +2,7 @@ name: Stop DES_EI
   hosts: localhost
   connection: local
   tasks:
-    - name: Stop virtual machine
+    - name: Stop EI_01
       azure_rm_virtualmachine:
         resource_group: infracodesa
         name: INFRACODESWSO2EI01
