--- a/ansible/DES_EI-start.yml
+++ b/ansible/DES_EI-start.yml
@@ -4,5 +4,5 @@
   tasks:
     - name: Start EI_01
       azure_rm_virtualmachine:
-        resource_group: infracodesa
+        resource_group: INFRACODESA
         name: INFRACODESWSO2EI01
